added title desc and icon

--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <title>Shire Elixir</title>
+    <meta name="description" content="Shire Elixir: Good science, great hair. For everyone. This isn't complicated. We use solid research and open tests to make a hair serum that just works. No matter who you are, Shire Elixir helps your hair feel its best." />
+
+    <link rel="icon" type="image/icon" href="/icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
